fetch-api: Add latest changes for connector-kube
