# fetch-api/connectors/kube/docs/swagger.json
@@ -48,6 +48,38 @@
                 }
             }
         },
+        "/namespaces": {
+            "get": {
+                "description": "Returns list of Namespaces.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "namespaces"
+                ],
+                "summary": "List namespaces",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.NamespaceListResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/pods": {
             "get": {
                 "description": "Returns list of pods.",
@@ -121,7 +153,7 @@
                 "tags": [
                     "workloads"
                 ],
-                "summary": "List Deployments",
+                "summary": "List deployments",
                 "parameters": [
                     {
                         "type": "string",
@@ -253,6 +285,31 @@
                 },
                 "healthy": {
                     "type": "boolean"
+                }
+            }
+        },
+        "response.Namespace": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.NamespaceListResponse": {
+            "type": "object",
+            "properties": {
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/response.Namespace"
+                    }
+                },
+                "total_items": {
+                    "type": "integer"
                 }
             }
         },
